# fastapi-cli-tool

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
fastapi_cli_tool/: constants.py  context.py  generator.py  helpers.py  main.py  options.py
fastapi_cli_tool/templates/app/{{ cookiecutter.folder_name }}/: __init__.py  models.py  urls.py
fastapi_cli_tool/templates/app/{{ cookiecutter.folder_name }}/crud/: __init.py
fastapi_cli_tool/templates/project/: cookiecutter.json
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/: manage.py  pyproject.toml
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/backend/: middleware.py  register_db.py  settings.py  urls.py
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/core/: app.py  urls.py
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/core/conf/: base_settings.py  email_smtp.py
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/core/contrib/: jwt_token.py  security.py
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/core/utils/: timezone.py
fastapi_cli_tool/templates/project/{{ cookiecutter.folder_name }}/tests/: test_jwt_token.py  test_password_hash.py  test_welcome_route.py
tests/: test_create_app.py  test_create_project.py
