[tool.poetry]
name = "fastapi-cli-tool"
version = "0.1.0"
description = ""
authors = ["ChrisBran0815 <72992408+ChrisBran0815@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_cli_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
cookiecutter = "^2.1.1"
questionary = "^1.10.0"
pydantic = {extras = ["email"], version = "^1.10.5"}

[tool.poetry.scripts]
fastapi-cli = "fastapi_cli_tool.main:app"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
